# simple-JNI-bug

./: README.md  pom.xml
src/main/c/: CMakeLists.txt  org_apache_activemq_artemis_bug_BugContext.c  org_apache_activemq_artemis_bug_BugContext.h
src/main/java/org/apache/activemq/artemis/bug/: BugContext.java  SubmitInformation.java
src/test/java/org/apache/activemq/artemis/bug/test/: BugTest.java
